@@ -56,7 +56,7 @@ public class MetaJavaLongShiftLeft extends AbstractMetaOperator {
 	    BigInteger(convertToDecimalString(arg1, services));
 	intArg2 = new
 	    BigInteger(convertToDecimalString(arg2, services));
-	Long longResult = new Long(intArg1.longValue() << intArg2.longValue());
+	Long longResult = Long.valueOf(intArg1.longValue() << intArg2.longValue());
 	
 	IntLiteral lit = new IntLiteral(longResult.toString());
 	return services.getTypeConverter().convertToLogicElement(lit);
